Fix message option buttons vertical align center

--- a/chat-app-client/src/styles/Chat.css
+++ b/chat-app-client/src/styles/Chat.css
@@ -127,6 +127,12 @@ div .message-thumbnail {
   border-radius: 5px;
 }
 
+.message-options > .message-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .edit-div,
 .edit-div > div {
   display: flex;
